fix profile image cropping

--- a/src/components/app/Profile/profile.scss
+++ b/src/components/app/Profile/profile.scss
@@ -398,6 +398,7 @@
   &--image {
     height: 215px;
     width: 100%;
+    object-fit: cover;
   }
 }
 .right-section {
